--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "contact-keeper",
+  "name": "band-keeper",
   "version": "1.0.0",
-  "description": "Contact manager app",
+  "description": "Band manager app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
