--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "band-keeper",
+  "name": "bandaid-react",
   "version": "1.0.0",
   "description": "Band manager app",
   "main": "server.js",
@@ -8,8 +8,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
