--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.3.0",
+    "react-youtube": "^7.11.2",
     "uuid": "^7.0.2"
   },
   "scripts": {
